{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 25,
  "lineage": "f51b9126-a76d-cc9c-722c-3d408d523152",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/networkSecurityGroups/nsg-shared",
            "location": "canadacentral",
            "name": "nsg-shared",
            "resource_group_name": "rg-capstone",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "Allow-RDP-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "207.81.58.40/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/networkSecurityGroups/nsg-workload",
            "location": "canadacentral",
            "name": "nsg-workload",
            "resource_group_name": "rg-capstone",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-from-hub",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/27"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/SharedServicesSubnet",
            "name": "SharedServicesSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1/subnets/snet-workload-a",
            "name": "snet-workload-a",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-spoke-1"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2/subnets/snet-workload-b",
            "name": "snet-workload-b",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-capstone",
            "virtual_network_name": "vnet-spoke-2"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/SharedServicesSubnet",
            "network_security_group_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/networkSecurityGroups/nsg-shared",
            "subnet_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/subnets/SharedServicesSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.shared",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.shared",
            "azurerm_virtual_network.hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1/subnets/snet-workload-a",
            "network_security_group_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/networkSecurityGroups/nsg-workload",
            "subnet_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1/subnets/snet-workload-a"
          },
          "dependencies": [
            "azurerm_network_security_group.workload",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.spoke1_workload",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2/subnets/snet-workload-b",
            "network_security_group_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/networkSecurityGroups/nsg-workload",
            "subnet_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2/subnets/snet-workload-b"
          },
          "dependencies": [
            "azurerm_network_security_group.workload",
            "azurerm_resource_group.capstone",
            "azurerm_subnet.spoke2_workload",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "adaf0654-697d-479c-bd99-bbea2c49d27c",
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "canadacentral",
            "name": "vnet-hub",
            "resource_group_name": "rg-capstone"
          },
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0fbf5242-d0dc-4da8-b88a-37f5ef919990",
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1",
            "location": "canadacentral",
            "name": "vnet-spoke-1",
            "resource_group_name": "rg-capstone"
          },
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b3e00228-c9d6-4060-9da5-46c5f12316a4",
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2",
            "location": "canadacentral",
            "name": "vnet-spoke-2",
            "resource_group_name": "rg-capstone"
          },
          "dependencies": [
            "azurerm_resource_group.capstone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/peer-hub-to-spoke1",
            "name": "peer-hub-to-spoke1",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1",
            "resource_group_name": "rg-capstone",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub/virtualNetworkPeerings/peer-hub-to-spoke2",
            "name": "peer-hub-to-spoke2",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2",
            "resource_group_name": "rg-capstone",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-1/virtualNetworkPeerings/peer-spoke1-to-hub",
            "name": "peer-spoke1-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-capstone",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-1"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-spoke-2/virtualNetworkPeerings/peer-spoke2-to-hub",
            "name": "peer-spoke2-to-hub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/7b01d9ac-7159-4a86-b68c-773c66f39156/resourceGroups/rg-capstone/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "resource_group_name": "rg-capstone",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-2"
          },
          "dependencies": [
            "azurerm_resource_group.capstone",
            "azurerm_virtual_network.hub",
            "azurerm_virtual_network.spoke2"
          ]
        }
      ]
    }
  ]
}